--- a/static/styles.css
+++ b/static/styles.css
@@ -1,44 +1,81 @@
-
-    body {
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-form {
-    /* Center the form on the page */
-    margin: 0 auto;
-    width: 400px;
-    /* Form outline */
-    padding: 1em;
-    display: flex;
-}
-
-img {
-    border-radius: 8px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 40px;
-    filter: drop-shadow(5px 5px 10px #000);
-    opacity: 1;
-    hover: opacity: 0.6;
-    transition: opacity 1s ease 0s;
-
-}
-
-ul,
-li {
-    display: inline
-}
-
-ul {
-    list-style: none;
-    padding: 0;
+body {
     margin: 0;
-    display: flex
+    padding: 0;
+    font-family: sans-serif;
+    line-height: 1.2;
+    background-color: #eee;
+}
+#header {
+    height: 24px;
+    background-color: #92a8d1;
+    color: white;
+    padding-top: 8px;
+    padding-left: 10px;
+    border-bottom: 1px solid #622;
+}
+#home-link {
+    display: inline-block;
+ }
+#controls {
+    margin: 10px 40px 0 40px;
+    background-color: #eee;
+}
+#wrap {
+    margin: 10px 40px 0 40px;
+    font-size: 18px;
 }
 
-form li+li {
-    margin-top: 1em;
+.rel_title {
+    display: inline-block;
+}
+
+.rel_title a {
+    color: #844;
+}
+
+.rel_result {
+    margin-bottom: 10px;
+    padding: 10px;
+    background-color: white;
+    border-radius: 5px;
+}
+
+.rel_qa_result {
+    margin-bottom: 10px;
+    padding: 10px;
+    background-color: #FFF0F5;
+    border-radius: 5px;
+}
+
+.rel_content {
+    color: #333;
+    font-size: 14px;
+}
+.rel_score {
+    display: inline-block;
+    margin-right: 6px;
+    font-weight: bold;
+}
+#qfield {
+    width: 100%;
+    box-sizing: border-box;
+
+    height: 40px;
+    font-size: 22px;
+
+    border: solid 1px #999;
+    color: "#333";
+
+    padding-left: 50px;
+
+    background-image: url('/static/search.png');
+    background-repeat: no-repeat;
+    background-position: left center;
+    outline: 0;
+  }
+#search-result{
+    margin: 10px 40px 0 40px;
+    font-size: 18px;
 }
 
 label {
@@ -97,4 +134,9 @@ input {
 input,
 label {
     display: block;
+}
+
+mark {
+  background-color: yellow;
+  color: black;
 }
